--- a/Бюро Кроссовок.md
+++ b/Бюро Кроссовок.md
@@ -3,12 +3,39 @@
 > - стараюсь располагать все в таком же порядке как нужно это сделать
 
 # Админка
-#### Остатки:
-##### Возможность редактировать вручную остаток каждого товара
-##### Функция добавить товар открывает такую страничку
-- ![[Screenshot from 2025-05-21 14-34-13.png|350]]
-#### Статистика
-+ Большими буквами сумма продаж и календарик с выбором временного промежутка (все данные верну с бэка), внизу список проданных товаров за период с их кол-вом
+#### Раздел остатки
+##### Будет таблица вида:
+
+| Картинка                              | Бренд | Название модели (текст) | Размер (текст) | Цвет (текст) | Цена  | Остаток |
+| ------------------------------------- | ----- | ----------------------- | -------------- | ------------ | ----- | ------- |
+| ![[IMG_20250521_220528_723.jpg\|100]] | Nike  | Nike Air Force          | 43             | Чёрный       | 10400 | 0       |
+| ![[IMG_20250521_220528_723.jpg\|100]] | Nike  | Nike Air Force          | 45             | Чёрный       | 10400 | 1       |
+ - Нужна возможность прям из таблицы редачить остаток (инпут в столбце остаток)
+ - Каким то образом или крандашик в последнкм столбце или еще как то нужно редачить товар выглядеть должно как в добавлении товара только с предзаполненными данными (см. [[#Функция добавить товар]])
+##### Функция добавить товар
+###### При нажатии на кнопку "+добавить товар"/нажатии на кнопку "редактировать" в таблице переходим на подобный экран
+![[Screenshot from 2025-05-21 14-34-13.png|350]]
+
+###### Поля отправлять поля форм датой
+
+| Поле              | Тип поля                          | Как выглядит                                                                                                                               | Возможные значения                                               | Отправляемые на бек                                                                                          |
+| ----------------- | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------ |
+| *Фото*            | Инпут для фоток                   | Как на скрине                                                                                                                              | Несколько фоток, может и ни одной                                | Форм датой                                                                                                   |
+| *Тип товара*      | Строка                            | Просто поле                                                                                                                                | Одежда, обувь, аксессуар                                         | type: Одежда: wear; Обувь - shoes; Аксессуар - accessories;                                                  |
+| *Название модели* | Строка                            | Просто поле                                                                                                                                | Выпадающий список / добавление нового значения, получаешь с бэка | model: Выбранная строка                                                                                      |
+| *Бренд*           | Строка                            | Просто поле                                                                                                                                | Выпадающий список / добавление нового значения, получаешь с бэка | brand: Выбранная строка                                                                                      |
+| *Цвет*            | Строка                            | Просто поле                                                                                                                                | Выпадающий список / добавление нового значения, получаешь с бэка | color: Выбранная строка                                                                                      |
+| *Размер*          | Список из элементов по две строки | Один элемент - два поля в одной линии, одно поле: размер; другое: размерная сетка. справа плюсик для добавления еще одного такого элемента | Список двух строк                                                | Список объектов {     size: первое поле размер (M, 10.5, 43); mapped_size: типа размерная сетка аля куку.  } |
+| *Описание*        | Строка                            | Большое поле, типа текстарея                                                                                                               | Произвольная строка                                              | description: введенная строка                                                                                |
+| *Цена*            | Число с плавающей точкой          | Поле                                                                                                                                       | Числа >=0                                                        | price: введенное число                                                                                       |
+
+###### ? Кнопка продать оффлайн
+Пока хз надо приудмать самим будет как это сделать чтобы было удобно и не щапарно на фронте
+
+Нужно добавлять товары + кол-во + размер + скидку
+#### Раздел статистика
++ Большими буквами сумма продаж и календарик с выбором временного промежутка для которого выводим данные (все данные верну с бэка), внизу список проданных товаров за период с их кол-вом
+![[IMG_20250521_235404_202.jpg]]
 
 # ? Сайт
  **нужно сделать пизже чем у кирзачей**
