--- a/Бюро Кроссовок.md
+++ b/Бюро Кроссовок.md
@@ -8,8 +8,8 @@
 
 | Картинка                              | Бренд | Название модели (текст) | Размер (текст) | Цвет (текст) | Цена  | Остаток |
 | ------------------------------------- | ----- | ----------------------- | -------------- | ------------ | ----- | ------- |
-| ![[IMG_20250521_220528_723.jpg\|100]] | Nike  | Nike Air Force          | 43             | Чёрный       | 10400 | 0       |
-| ![[IMG_20250521_220528_723.jpg\|100]] | Nike  | Nike Air Force          | 45             | Чёрный       | 10400 | 1       |
+| ![[IMG_20250521_220528_723.jpg]] | Nike  | Nike Air Force          | 43             | Чёрный       | 10400 | 0       |
+| ![[IMG_20250521_220528_723.jpg]] | Nike  | Nike Air Force          | 45             | Чёрный       | 10400 | 1       |
  - Нужна возможность прям из таблицы редачить остаток (инпут в столбце остаток)
  - Каким то образом или крандашик в последнкм столбце или еще как то нужно редачить товар выглядеть должно как в добавлении товара только с предзаполненными данными (см. [[#Функция добавить товар]])
 ##### Функция добавить товар
